@@ -58,6 +58,10 @@ protected:
 	void setUseMplayerWindow(bool v);
 	bool useMplayerWindow();
 
+	// Windows only: pass to mplayer short filenames (8+3)
+	void setUseShortNames(bool b);
+	bool useShortNames();
+
 	void setMplayerAdditionalArguments(QString args);
 	QString mplayerAdditionalArguments();
 
